tests/rpm-pkgs/logrotate-3.18.1-2.fc35/output-exp@symbiotic/scan-results.err
Error: COMPILER_WARNING (CWE-563):
logrotate-3.18.1/logrotate.c:1083:17: warning[-Wunused-but-set-variable]: variable 'ptr' set but not used
# 1081|   {
# 1082|       size_t total = 0;
# 1083|->     const char *ptr = (const char *) buf;
# 1084|   
# 1085|       while (count > 0)
